# aws_cloudops_agent

./: .agentcore.yaml  .gitignore  README.md  TEST_KB_RETRIEVAL.md  agent_cli.py  aws_cloudops_agent.py  deploy_agent.py  dockerfile  invoke_agent.py  pyproject.toml  rag_base_infra.yml.tmp  readme.txt  requirements.txt  response.json  setup_kb_env.sh  update_kb_config.sh
.github/workflows/: build.yml  terraform.yml
assets/: rag_pipeline.json
assets/ingest/: ingest_lambda_code.py
assets/ingest_lambda/: lambda_handler.py
assets/policies/: AgentRuntimeRole.json  assume-role-policy.json  bedrock-marketplace-policy.json  lambda-resource-policy-update.json  trust-policy.json
assets/rag_documents/: test-lambda.txt
assets/retrieve_lambda/: lambda_retrieve_function_code.py
assets/samples/: agent_response.txt  (+1 more)
cloudformation/: ping-monitor-with-approval.yaml  ping-monitor.yaml
config/: dynamic-config.yaml  static-config.yaml
docs/: AGENT_WORKFLOW_BEST_PRACTICES.md  DEPLOYMENT_COMMANDS.md  FEATURE_SLACK_APPROVAL.md  HANDLING_LONG_RESPONSES.md  LAMBDA_DEPLOYMENT_GUIDE.md  LAMBDA_PING_MONITOR.md  aws-strands-agent.drawio
modules/: backend.tf  bucket.tf  iam_role.tf  knowledge_base.tf  lambda_ingest.tf  lambda_retrieve.tf  main.tf  opensearch.tf  output.tf  response.json  s3_event_trigger.tf  test-lambda.txt  variables.tf  version.tf  versions.tf
scripts/: deploy-approval-workflow.ps1  deploy-ping-monitor.ps1  test_lambda_docker.ps1
src/: agent_cli.py  agent_fastapi.py  agent_runtime.py  aws_cloudops_agent.py  deploy_agent.py  invoke_agent.py  ollama_agent.py
(+28 files in other folders)
